--- a/bnStyle.css
+++ b/bnStyle.css
@@ -1,16 +1,10 @@
 canvas {
-	border-style:solid;
-	border-width:1px;
-	background:white;
+	border: 1px solid #ccc;
+	background: white;
 }
 
 div {
 	padding: 1px;
-	-moz-border-radius: 5px;
-    border-radius: 5px;
-	-moz-box-shadow:    1px 1px 2px 0px #ccc;
-	-webkit-box-shadow: 1px 1px 2px 0px #ccc;
-	box-shadow:         1px 1px 2px 0px #ccc;
 }
 
 td {
@@ -19,32 +13,21 @@ td {
 }
 
 body {
-    font-family: Verdana, Arial, sans-serif;
+    font-family: OpenSans, Verdana, Arial, sans-serif;
     font-size: smaller;
-    padding: 50px;
-    color: #555;
-    width: 650px;
-}
-
-h1 {
-    letter-spacing: 6px;
-    font-size: 1.6em;
-    color: #be7429;
-    font-weight: bold;
+    overflow: hidden;
+    margin: 5px;
+	padding: 5px;
 }
 
 h2 {
     text-align: left;
-    letter-spacing: 6px;
     font-size: 1.4em;
-    color: #be7429;
     font-weight: normal;
-    width: 450px;
 }
 
 table {
     padding: 1px;
-    background-color: #eff0ef;
     -moz-border-radius: 10px;
     border-radius: 10px;
 }
@@ -53,39 +36,13 @@ tbody {
 }
 
 a {
-    color: #be7429;
+    color: inherit;
     text-decoration: none;
 }
 
-a:hover {
-    text-decoration: underline;
-}
-
-
-code {
-    font-family: monospace;
-    color: #666666;
-}
-
-smallNote {
-    font-size: 0.9em;
-    font-family: sans-serif;
-}
-
-li {
-    padding-top: 4px;
-    padding-bottom: 4px;
-}
-
-normalText {
-    
-}
-normalText:hover {
-    border-bottom-style: dotted;
-    border-bottom-color: #ffcc33;
-    color: #ab6f00;
-}
-
-input:focus {
-    background-color: #fbf5c0;
+img.fork {
+	position: absolute;
+	top: 0;
+	right: 0;
+	border: 0;
 }
