--- a/bnStyle.css
+++ b/bnStyle.css
@@ -1,43 +1,33 @@
 canvas {
 	border: 1px solid #ccc;
 	background: white;
+	-moz-box-shadow: 0 0 5px #888;
+	-webkit-box-shadow: 0 0 5px #888;
+	box-shadow: 0 0 5px #888;
+	margin-bottom: 10px;
 }
 
-div {
-	padding: 1px;
-}
-
-td {
-	vertical-align:top;
-	padding: 5px;
+#data {
+	padding: 2%;
+	-webkit-column-count: 2;
+	-moz-column-count: 2;
+	column-count: 2;
+	line-height:1em;
+	max-height: 8em;
+	height: 8em
 }
 
 body {
-    font-family: OpenSans, Verdana, Arial, sans-serif;
-    font-size: smaller;
-    overflow: hidden;
-    margin: 5px;
+	font-family: OpenSans, Verdana, Arial, sans-serif;
+	font-size: smaller;
+	overflow: hidden;
+	margin: 5px;
 	padding: 5px;
 }
 
-h2 {
-    text-align: left;
-    font-size: 1.4em;
-    font-weight: normal;
-}
-
-table {
-    padding: 1px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-}
-tbody {
-    vertical-align: top;
-}
-
 a {
-    color: inherit;
-    text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 img.fork {
